--- a/server/package.json
+++ b/server/package.json
@@ -16,15 +16,16 @@
   "author": "Patrick Becker",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.22",
     "@types/node": "^14.0.11",
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "typescript": "^3.9.6"
+    "nodemon": "^2.0.4"
   }
 }
