--- a/server/package.json
+++ b/server/package.json
@@ -21,13 +21,15 @@
     "mongoose": "^5.9.18",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.22",
     "@types/node": "^14.0.11",
     "@types/passport-jwt": "^3.0.3",
+    "@types/validator": "^13.0.0",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
