--- a/server/package.json
+++ b/server/package.json
@@ -18,17 +18,21 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "mongoose": "^5.9.18",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "typescript": "^3.9.6",
+    "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/express-fileupload": "^1.1.3",
     "@types/mongoose": "^5.7.22",
     "@types/node": "^14.0.11",
     "@types/passport-jwt": "^3.0.3",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.0.0",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
