--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "Patrick Becker",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
@@ -27,6 +28,7 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-fileupload": "^1.1.3",
     "@types/mongoose": "^5.7.22",
