--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "material-ui-confirm": "^2.1.1",
     "material-ui-dropzone": "^3.3.0",
     "moment": "^2.27.0",
