Fixed authentication error, added gh-pages

--- a/server/.sample.env
+++ b/server/.sample.env
@@ -1,14 +1,12 @@
-DB_STRING=mongodb://user:password@mongo:27017/image_sharing
-PROD_DB_STRING=mongodb://user:password@mongo:27017/image_sharing
-
 MONGO_DB_ROOT_USER=root
 MONGO_DB_ROOT_PASSWORD=password
+MONGO_DB_DATABASE=image_sharing
 
 MONGO_EXPRESS_USER=admin
 MONGO_EXPRESS_PASSWORD=password
 
 MONGO_DB_USER=user
 MONGO_DB_PASSWORD=password
-MONGO_DB_DATABASE=image_sharing
 MONGO_DB_HOST=mongo
-MONGO_DB_PORT=27017
+
+EXPRESS_PORT=8085
