--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
   "name": "client",
   "version": "1.0.0",
+  "author": "Patrick Becker",
   "description": "frontend",
   "private": true,
+  "license": "MIT",
+  "homepage": "https://patrickb-hub.github.io/image-board/",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@types/jwt-decode": "^2.2.1",
-    "jwt-decode": "^2.2.0",
     "material-ui-confirm": "^2.1.1",
     "material-ui-dropzone": "^3.3.0",
     "moment": "^2.27.0",
@@ -25,11 +26,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "author": "Patrick Becker",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -51,6 +53,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "gh-pages": "^3.1.0"
   }
 }
