--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     command: sh -c "npm install && npm run prod"
     ports:
-      - 443:443
+      - ${EXPRESS_PORT}:${EXPRESS_PORT}
     working_dir: /home/projects/image_sharing/backend
     volumes:
       - ./:/home/projects/image_sharing/backend
@@ -14,16 +14,15 @@ services:
   mongo:
     image: mongo
     restart: always
-    container_name: mongo
+    depends_on:
+      - app
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_DB_ROOT_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_DB_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_DB_DATABASE}
     volumes:
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ./mongo/data:/data/db
-    ports:
-      - 27017-27020:27017-27020
 
   mongo-express:
     image: mongo-express
@@ -37,4 +36,3 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_EXPRESS_PASSWORD}
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_DB_ROOT_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_DB_ROOT_PASSWORD}
-      ME_CONFIG_MONGODB_PORT: ${MONGO_DB_PORT}
